--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,1 +1,16 @@
-v0.1.0, 2014-06-30 -- Initial release.
+Changelog
+=========
+
+0.1.1 (2014-07-15)
+------------------
+
+* Added unit testing
+
+* Added verification of FFmpeg installation
+
+* Added validation of playlists
+
+0.1.0 (2014-06-30)
+------------------
+
+* Initial release.
